# HPCSEII

./: CMakeLists.txt  Time analysis hpc functions.numbers  Times.numbers  a.out  complex.cpp  complex.h  complexAVX.cpp  complexAVX.h  convergence study.numbers  expansion.cpp  expansion.h  main.cpp  morton.cpp  morton.h  omp.h  quadtree.cpp  quadtree.h  test.cpp  test.h  timeMorton.cpp  timeMorton.h  timer.hpp  valgrind_log_17-06-2016
a.out.dSYM/Contents/Resources/DWARF/: a.out
